manifests/applications/nextcloud/namespace.yaml
# Nextcloud namespace
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    name: nextcloud
