manifests/applications/nextcloud/routes.yaml
# Kong HTTPRoute for Nextcloud
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  parentRefs:
  - name: kong-gateway
    namespace: kong
  hostnames:
  - cloud.happyvertical.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nextcloud
      port: 8080
